<resources>
    <string name="app_name">LQS Delivery with Barcode Scanner</string>
    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <bool name="cameraPreviewShouldFillView">true</bool>
    
    <!-- common -->
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="msg_exit">Do you want to exit?</string>
    <string name="title_network">Network Connect</string>
    <string name="msg_network">Please wait...</string>
    <!-- share -->
    <!-- userinfo -->
    <string name="btn_start">START</string>
    <string name="msg_userid">Please input your employee code</string>
    <!-- main -->
    <string name="btn_gateway">GATEWAY</string>
    <string name="btn_driver">DRIVER</string>

    <!-- gateway -->
    <string name="lbl_gateway">GATEWAY SCAN</string>
    <string name="lbl_bypass">Bypass</string>
    <string name="lbl_airport">Lisbon Airport</string>
    <string name="lbl_departure">Lisbon Departure</string>
    <string name="lbl_arrival">Arrival At Destination</string>
    <string name="btn_bypass">Bypass</string>
    <string name="btn_airport">Lisbon Airport</string>
    <string name="btn_departure">Lisbon Departure</string>
    <string name="btn_arrival">Arrival At Destination</string>

    <!-- driver -->
    <string name="lbl_driver">DRIVER</string>
    <string name="lbl_driver_load">Driver Load</string>
    <string name="btn_driver_load">Driver Load</string>
    <string name="btn_delivery">Delivery</string>

    <!-- delivery -->
    <string name="lbl_delivery">Delivery</string>
    <string name="lbl_bad_address">Bad Address</string>
    <string name="lbl_refused">Refused</string>
    <string name="lbl_closed">Closed</string>
    <string name="lbl_damage">Damage</string>
    <string name="lbl_pod">POD</string>
    <string name="btn_bad_address">Bad Address</string>
    <string name="btn_refused">Refused</string>
    <string name="btn_closed">Closed</string>
    <string name="btn_damage">Damage</string>
    <string name="btn_pod">POD</string>

    <!-- scan intro -->
    <string name="lbl_scan">"GATEWAY SCAN\nLisbon Airport\nByPass Scan"</string>

    <!-- scan -->
    <string name="btn_scan">SCAN</string>
    <string name="btn_detail">DETAIL</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_send">SEND</string>
    <string name="msg_delete">Are you sure to delete?</string>
    <string name="msg_no_user">You are not an existing employee.</string>
    <string name="lbl_dialog_manual_code">Manual Barcode</string>
    <string name="msg_manual_code">Enter barcode manually</string>
    <string name="lbl_pod_desc">POD: </string>
    <string name="lbl_obs">OBS: </string>

    <!-- scan detail -->
    <string name="btn_photo">PHOTO</string>
    <string name="btn_ok">OK</string>
</resources>
