<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg">

    <Button
        android:id="@+id/button_photo"
        android:layout_width="@dimen/width_scan_btn"
        android:layout_height="@dimen/height_scan_btn"
        android:layout_marginEnd="@dimen/margin_end_scan_btn_scan"
        android:layout_marginRight="@dimen/margin_end_scan_btn_scan"
        android:layout_marginTop="@dimen/margin_top_scan_btn_scan"
        android:background="@color/btn"
        android:text="@string/btn_photo"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="@dimen/width_scan_btn"
        android:layout_height="@dimen/height_scan_btn"
        android:layout_marginEnd="@dimen/margin_end_scan_btn_scan"
        android:layout_marginRight="@dimen/margin_end_scan_btn_scan"
        android:layout_marginTop="@dimen/margin_top_scan_btn_scan"
        android:background="@color/btn"
        android:text="@string/btn_scan"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_gw_title"
            android:text="@string/lbl_scan"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/layout_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_scan_main_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_header">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_scan_camera" />

            <ImageView
                android:id="@+id/iv_camera_result"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_scan_elem"
                android:src="@drawable/logo" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/code_log_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_scan_code_list"
                android:layout_weight="4"
                android:background="@color/white"
                android:scrollbars="vertical" />

            <com.github.gcacace.signaturepad.views.SignaturePad xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/signature_pad"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_scan_elem"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:text="For Customer Signature"
                android:textSize="35sp"
                app:penColor="@android:color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/height_scan_elem"
                android:layout_marginTop="2dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/et_pod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="top"
                    android:text="@string/lbl_pod_desc" />
            </LinearLayout>

            <Button
                android:id="@+id/button_send"
                android:layout_width="@dimen/width_scan_btn"
                android:layout_height="@dimen/height_scan_btn"
                android:layout_marginTop="10dp"
                android:background="@color/btn"
                android:text="@string/btn_send"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>